@startuml engine-editor-action-bridge
!theme plain
skinparam backgroundColor #FEFEFE
skinparam classAttributeIconSize 0
skinparam defaultFontSize 11

title Editor Action & Bridge Pattern

legend right
  |= Module |= Color |= Description |
  | :engine | <#FFF3E0> | Interface/abstract definition |
  | :ui | <#E8F5E9> | UI layer implementation |
  | :app | <#E3F2FD> | App layer implementation |
  | Third Party | <#F5F5F5> | Custom implementation |
endlegend

' ===== EditorAction =====
package ":engine" #FFF3E0 {

  class EditorAction <<(S,#FFF3E0)>> {
    + timestamp: Long
    --
    CommitText(text, replacements?)
    RevokeCommit
    InsertPairedSymbols(left, right)
    MoveCursor(direction)
    SelectRange(direction)
    PerformEdit(action)
  }

  class ImeEngine <<(C,#FFF3E0)>> {
    + handleIntent(intent)
    - dispatchEditorAction(action)
    - _editorBridges: MutableList<ImeEditorBridge>
    + attachEditorBridge(bridge)
    + detachEditorBridge(bridge)
  }

  interface ImeEditorBridge <<(I,#FFF3E0)>> {
    + commitText(text, replacements?)
    + revokeCommit()
    + insertPairedSymbols(left, right)
    + moveCursor(direction)
    + selectRange(direction)
    + performEdit(action)
    + getText(): CharSequence
    + getSelection(): TextRange
  }

  abstract class BaseImeEditorBridge <<(A,#FFF3E0)>> {
    - revertion: SelectionSnapshot?
    # resetRevertion()
    # recordRevertion(...)
    # onRevokeCommit(snapshot)
    # doNormalCommitText(text)
    # doReplaceableCommitText(text, replacements)
  }

  note right of BaseImeEditorBridge
    **Undo Mechanism (Single Snapshot)**
    - Only supports undoing last revertible input
    - Records selection snapshots before/after commit
    - New revertible input overwrites old snapshot
    - revokeCommit() clears after consumption
  end note
}

' ===== :ui Implementation =====
package ":ui" #E8F5E9 {
  class EditTextBridge <<(C,#E8F5E9)>> {
    - targetSupplier: () -> EditText?
    + doNormalCommitText(text)
    + doReplaceableCommitText(text, replacements)
    + insertPairedSymbols(left, right)
    + moveCursor(direction)
    + selectRange(direction)
    + performEdit(action)
    + getText(): CharSequence
    + getSelection(): TextRange
    # onRevokeCommit(snapshot)
  }
  note right of EditTextBridge
    For EditText targets
    Directly manipulates Editable text
    Suitable for non-system IME scenarios
  end note
}

' ===== :app Implementation =====
package ":app" #E3F2FD {
  class InputConnectionBridge <<(C,#E3F2FD)>> {
    - targetSupplier: () -> InputConnection?
    + doNormalCommitText(text)
    + doReplaceableCommitText(text, replacements)
    + insertPairedSymbols(left, right)
    + moveCursor(direction)
    + selectRange(direction)
    + performEdit(action)
    + getText(): CharSequence
    + getSelection(): TextRange
    # onRevokeCommit(snapshot)
  }
  note right of InputConnectionBridge
    For system InputConnection
    Created and managed by IMEService
    Supplier pattern for current IC access
  end note
}

' ===== Third-Party Custom =====
package "Third-Party Extension" #F5F5F5 {
  class CustomBridge <<(C,#F5F5F5)>> {
    Custom implementation
    (Web editor / Game engine / Terminal)
  }
  note right of CustomBridge
    Simple case: directly implement ImeEditorBridge
    Needs undo: extend BaseImeEditorBridge
  end note
}

' ===== Relationships =====
ImeEngine --> EditorAction : generates
ImeEngine --> ImeEditorBridge : dispatchEditorAction()

ImeEditorBridge <|-- BaseImeEditorBridge : abstract implementation
BaseImeEditorBridge <|-- InputConnectionBridge : :app
BaseImeEditorBridge <|-- EditTextBridge : :ui
ImeEditorBridge <|.. CustomBridge : third-party

' ===== Dispatch Flow =====
note left of ImeEngine
  **dispatchEditorAction() Flow**
  when(action) {
    is CommitText -> bridge.commitText(text, replacements)
    is RevokeCommit -> bridge.revokeCommit()
    is InsertPairedSymbols -> bridge.insertPairedSymbols(left, right)
    is MoveCursor -> bridge.moveCursor(direction)
    is SelectRange -> bridge.selectRange(direction)
    is PerformEdit -> bridge.performEdit(action)
  }
end note

@enduml
